--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+#GENERAL
+server.port=8080
+#
+#DATABASE
+spring.datasource.url=jdbc:mysql://localhost/myanimu?useSSL=false
+spring.datasource.dbname=myanimu
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
